--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -8,5 +8,18 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
+   environment_config: 
+    NODE_ENV=production
+    ENVIROMENT=production
+    TYPEORM_CONNECTION=postgres
+    TYPEORM_MIGRATIONS_DIR=./src/migrations
+    TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
+    TYPEORM_MIGRATIONS=./src/migrations/*.ts
+    TYPEORM_HOST=$TYPEORM_HOST
+    TYPEORM_PORT=$TYPEORM_PORT
+    TYPEORM_USERNAME=$TYPEORM_USERNAME
+    TYPEORM_PASSWORD=$TYPEORM_PASSWORD
+    TYPEORM_DATABASE=$TYPEORM_DATABASE
+    
   roles:
     - deploy
