--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -293,34 +293,20 @@ jobs:
             apk add --update ansible
             apk add --update tar gzip nodejs npm
             apk add --update openssh-client
-            
       - run:
-          name: Add env variables
-          command: |
+          name: deploy backend      
+          command: |  
             cd backend
-            mkdir backend
-            EM ="backend/.env"
-            echo ENVIROMENT=production > $EM
-            echo NODE_ENV=production >> $EM
-            echo TYPEORM_CONNECTION=postgres >> $EM
-            echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> $EM
-            echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> $EM
-            echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> $EM
-            echo TYPEORM_HOST=$TYPEORM_HOST >> $EM
-            echo TYPEORM_PORT=$TYPEORM_PORT >> $EM
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> $EM
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> $EM
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> $EM
-            cat $EM
+            npm i
+            npm run build
+            cd ..
             tar -C backend -czvf artifact.tar.gz .
-            ls -la         
-      - run:
-          name: anisible Backend
-          command: |
-            cat .circleci/ansible/inventory.txt
-            ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/deploy-backend.yml
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml            
        
-     #- destroy-environment    
+       #- destroy-environment    
       
            
                     
