--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -310,14 +310,19 @@ jobs:
             echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> $myenv
             echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> $myenv
             cat $myenv
+            cd backend
+            npm i
+            npm run build 
+            cd..
             tar -C backend -czvf artifact.tar.gz .
       - run:
           name: deploy backend      
           command: |  
+            cd backend
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
-            cat .circleci/ansible/inventory.txt
-            ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/deploy-backend.yml        
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml        
        
        #- destroy-environment    
       
