--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,7 +304,7 @@ jobs:
                
                  echo "[all]" > .circleci/ansible/inventory.txt
                  echo "$VIJI_IP" > .circleci/ansible/inventory.txt
-                 cat ./inventory
+                 cat .circleci/ansible/inventory.txt
    
       - attach_workspace:
           at: ~/     
