--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -315,7 +315,7 @@ jobs:
             echo "Contents  of the inventory.txt file is -------"
             cat .circleci/ansible/inventory.txt
             cd .circleci/ansible/
-            ansible-playbook -i ./inventory deploy.yml
+            ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/deploy-backend.yml
           
                        
             #[[ ! -d backend ]] && mkdir backend
