--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -8,8 +8,7 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
-    NODE_ENV=production
-    ENVIROMENT=production
+  environment:  
     TYPEORM_CONNECTION=postgres
     TYPEORM_MIGRATIONS_DIR=./src/migrations
     TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
