--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -306,7 +306,7 @@ jobs:
                   --filters "Name=tag:project,Values=udapeople" \
                   --output text)
                  echo "$VIJI_IP"
-                 echo "[all]" > .circleci/ansible/inventory.txt
+                 echo "[web]" > .circleci/ansible/inventory.txt
                  echo $VIJI_IP >> .circleci/ansible/inventory.txt
                  cat .circleci/ansible/inventory.txt
                  
