--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -9,15 +9,16 @@
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
   environment:  
-    TYPEORM_CONNECTION=postgres
-    TYPEORM_MIGRATIONS_DIR=./src/migrations
-    TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
-    TYPEORM_MIGRATIONS=./src/migrations/*.ts
-    TYPEORM_HOST=$TYPEORM_HOST
-    TYPEORM_PORT=$TYPEORM_PORT
-    TYPEORM_USERNAME=$TYPEORM_USERNAME
-    TYPEORM_PASSWORD=$TYPEORM_PASSWORD
-    TYPEORM_DATABASE=$TYPEORM_DATABASE
+    TYPEORM_CONNECTION: "{{ lookup('env','TYPEORM_CONNECTION') }}"
+    TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
+    TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
+    TYPEORM_PORT: 5432
+    TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
+    TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
+    TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
+    TYPEORM_MIGRATIONS: "{{ lookup('env','TYPEORM_MIGRATION') }}"
+    TYPEORM_MIGRATIONS_DIR: "{{ lookup('env','MIGRATIONS_DIR') }}"
+
     
   roles:
     - deploy
