--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -1,8 +1,9 @@
 ---
+
 - name: "configuration play." 
   hosts: web
   user: ubuntu
-  become =: true
+  become: true
   become_method: sudo
   become_user: root
   gather_facts: false
