--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,15 +12,15 @@ commands:
           when: on_fail
           command: |
             cd backend
-             echo "Destroying environment: <<parameters.workflow_id>> "
+            echo "Destroying environment: <<parameters.workflow_id>> "
              #aws s3 rm s3://udapeople-s3bucket-${CIRCLE_WORKFLOW_ID}/ --recursive
-             aws s3 rm s3://udapeople-c41935f/ --recursive
+            aws s3 rm s3://udapeople-c41935f/ --recursive
              
              #aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
-             aws cloudformation delete-stack --stack-name udapeople-backend-c41935f
+            aws cloudformation delete-stack --stack-name udapeople-backend-c41935f
              
              #aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
-             aws cloudformation delete-stack --stack-name udapeople-frontend-c41935f
+            aws cloudformation delete-stack --stack-name udapeople-frontend-c41935f
             
   undo_migrations:
     description: Revert the last migration if successfully run in the current workflow.
@@ -341,10 +341,8 @@ jobs:
             #tar -C backend -czvf artifact.tar.gz .    
        
       - undo_migrations
-      - destroy-environment    
-       
-      
-           
+      - destroy-environment:
+            workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"  
                     
 workflows:
  default:
