--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,14 +13,12 @@ commands:
           command: |
             cd backend
             echo "Destroying environment: <<parameters.workflow_id>> "
-             #aws s3 rm s3://udapeople-s3bucket-${CIRCLE_WORKFLOW_ID}/ --recursive
-            aws s3 rm s3://udapeople-c41935f/ --recursive
+            aws s3 rm s3://udapeople-s3bucket-${CIRCLE_WORKFLOW_ID}/ --recursive
+           
+            aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
              
-             #aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
-            aws cloudformation delete-stack --stack-name udapeople-backend-c41935f
-             
-             #aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
-            aws cloudformation delete-stack --stack-name udapeople-frontend-c41935f
+            aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
+            
             
   undo_migrations:
     description: Revert the last migration if successfully run in the current workflow.
@@ -269,10 +267,7 @@ jobs:
             name: Deploy frontend objects
             command: |
               cd frontend
-              #s3Buck=$(echo "udapeople-${CIRCLE_WORKFLOW_ID:0:7}")
-              
-              s3Buck=$(echo "udapeople-c41935f")
-              
+              s3Buck=$(echo "udapeople-${CIRCLE_WORKFLOW_ID:0:7}")
               aws s3 sync dist s3://$s3Buck/
               URL02=("http://$s3Buck.s3-website-eu-east-1.amazonaws.com")
               curl -H "Content-Type: text/plain" -H "token: 3db6c101-a4a9-41b4-9a5c-259717683a43" --request PUT --data "$URL02" https://api.memstash.io/values/s3Buck_${CIRCLE_WORKFLOW_ID}
@@ -281,7 +276,9 @@ jobs:
             root: .
             paths:
               - frontend/dist
-      #- destroy-environment
+      - undo_migrations
+      - destroy-environment:
+            workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"  
       
   deploy-backend:
     docker:
@@ -322,24 +319,7 @@ jobs:
             cat .circleci/ansible/inventory.txt
             cd .circleci/ansible/
             ansible-playbook -i inventory.txt deploy-backend.yml
-          
-                       
-            #[[ ! -d backend ]] && mkdir backend
-            #myenv="backend/.env"
-            #echo ENVIROMENT=production > $myenv
-            #echo NODE_ENV=production >> $myenv
-            #echo TYPEORM_CONNECTION=postgres >> $myenv
-            #echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> $myenv
-            #echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> $myenv
-            #echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> $myenv
-            #echo TYPEORM_HOST=$TYPEORM_HOST >> $myenv
-            #echo TYPEORM_PORT=$TYPEORM_PORT >> $myenv
-            #echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> $myenv
-            #echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> $myenv
-            #echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> $myenv
-            #cat $myenv
-            #tar -C backend -czvf artifact.tar.gz .    
-       
+  
       - undo_migrations
       - destroy-environment:
             workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"  
@@ -347,27 +327,27 @@ jobs:
 workflows:
  default:
     jobs:
-    #- build-frontend
-    #- build-backend
-    #- test-frontend:
-    #      requires: [build-frontend]
-    #- test-backend:
-    #      requires: [build-backend]    
-    #- scan-backend:
-    #      requires: [build-backend]
-    #- scan-frontend:
-    #      requires: [build-frontend]
-    #- deploy-infrastructure:
-    #      requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-    #      filters:
-    #          branches:
-    #            only:
-    #              - master
-    #- configure-infrastructure:
-    #      requires: [deploy-infrastructure]
-    #- run-migrations:
-    #      requires: [configure-infrastructure]    
-    #- deploy-frontend:
-    #     requires: [run-migrations]
-    - deploy-backend
-    #      requires: [run-migrations]
+    - build-frontend
+    - build-backend
+    - test-frontend:
+          requires: [build-frontend]
+    - test-backend:
+          requires: [build-backend]    
+    - scan-backend:
+          requires: [build-backend]
+    - scan-frontend:
+          requires: [build-frontend]
+    - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+              branches:
+                only:
+                  - master
+    - configure-infrastructure:
+          requires: [deploy-infrastructure]
+    - run-migrations:
+          requires: [configure-infrastructure]    
+    - deploy-frontend:
+         requires: [run-migrations]
+    - deploy-backend:
+          requires: [run-migrations]
